--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "crypto-js": "^4.1.1",
     "helmet": "^6.1.5",
     "mongoose": "^7.0.4",
+    "nestjs-minio-client": "^2.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -43,8 +45,10 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
+    "@types/minio": "^7.0.18",
     "@types/multer": "^1.4.7",
     "@types/node": "18.15.11",
     "@types/passport-jwt": "^3.0.8",
