fix:add build cmd

--- a/DockerFile
+++ b/DockerFile
@@ -4,6 +4,6 @@ COPY . ./jblog-backend
 
 WORKDIR /jblog-backend
 
-RUN npm install -g pnpm pm2 && pnpm install
+RUN npm install -g pnpm pm2 && pnpm install && pnpm run build
 
 CMD [ "pm2", "start", "dist/main.js", "--name", "jblog-backend"]
